--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #000; /* Consider changing the background color as needed */
+    background: #000; /* Barkaplcan*/
 }
 
 .logo {
